# bitsi

./: .gitignore  Cargo.toml  README.md  serial-control.ino
serial-control/: serial-control.ino
src/: joystick.rs  main.rs  point.rs  scripted.rs  serial.rs
