[package]
name = "bitsi_joystick"
version = "0.1.0"
authors = ["Jeremy Schmidt <8888694+nocturnalBadger@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.34"
serialport = "4.0.1"
ctrlc = "3.1.8"
